Track documentation comments in function and class arrows

--- a/test/html/expect/test_package+ml/Type/index.html
+++ b/test/html/expect/test_package+ml/Type/index.html
@@ -47,6 +47,9 @@
    <div class="spec type" id="type-higher_order">
     <a href="#type-higher_order" class="anchor"></a><code><span class="keyword">type</span> higher_order = <span>(int <span>-&gt;</span> int)</span> <span>-&gt;</span> int</code>
    </div>
+   <div class="spec type" id="type-commented_arrow">
+    <a href="#type-commented_arrow" class="anchor"></a><code><span class="keyword">type</span> commented_arrow = int <span>-&gt;</span> int</code>
+   </div>
    <div class="spec type" id="type-labeled">
     <a href="#type-labeled" class="anchor"></a><code><span class="keyword">type</span> labeled = <span>l:int</span> <span>-&gt;</span> int</code>
    </div>
